fixed spacing

--- a/app/(pages)/_components/taskCarousel.module.scss
+++ b/app/(pages)/_components/taskCarousel.module.scss
@@ -71,7 +71,8 @@
 
 /* Even spacing for left/right cards based on card widths and a 40px gap */
 .left {
-  transform: translate(calc(-320px - 40px), -50%) scale(0.7);
+  
+  transform: translate(calc(-320px - 140px), -50%) scale(0.9);
   z-index: 1;
   opacity: 0.7;
 }
@@ -81,7 +82,7 @@
   opacity: 1;
 }
 .right {
-  transform: translate(calc(320px + 40px), -50%) scale(0.7);
+  transform: translate(calc(320px - 90px), -50%) scale(0.9);
   z-index: 1;
   opacity: 0.7;
 }
